cleaned the clipping issue up

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -37,6 +37,7 @@
   display:flex;
   justify-content: space-around;
   background-color:#F79B26 ;
+  z-index: 10;
 }
 .navDrop{
   /* position: relative;
