--- a/frontend/src/components/RichTextEditor/editor.css
+++ b/frontend/src/components/RichTextEditor/editor.css
@@ -17,4 +17,5 @@
 .preview {
     padding: 1rem;
     margin-top: 1rem;
+    border-top:1px solid gray;
   }
